--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+jasypt.encryptor.password= your-secret-key here 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port= 9090
+spring.data.mongodb.username=// your user name here
+spring.data.mongodb.password=ENC(your encrypted password here)
+
+
+
+
