--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.data.mongodb.username=// your user name here
 spring.data.mongodb.password=ENC(your encrypted password here)
 
 
+org.springframework.boot.autoconfigure.EnableAutoConfiguration=com.ulisesbocchio.jasyptspringboot.JasyptSpringBootAutoConfiguration
+
+
+
 
 
